--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,8 +1,10 @@
 {
     "title": "Guess the Number",
-    "login": "Sign in with Email",
-    "loginGoogle": "Sign in with Google",
-    "signup": "Sign up with Email",
+    "login": "Sign In",
+    "loginEmail": "Sign In with Email",
+    "loginGoogle": "Sign In with Google",
+    "signup": "Sign up",
+    "signupEmail": "Sign up with Email",
     "signupGoogle": "Sign up with Google",
     "id": "Username",
     "pass": "Password",
@@ -15,6 +17,7 @@
     "alertDelete": "Are you sure want to delete this account?",
     "alertLeave": "Are you sure you want to leave the game?",
     "alertInsufficient": "Not enough credits to buy a digit, need: ",
+    "signOut": "Sign Out",
     "yes": "Yes",
     "no": "No",
     "apply": "Apply",
@@ -26,10 +29,10 @@
     "search": "Searching for a Game...",
     "searchPlayers": "Searching for opponents...",
     "creator": "Creator",
-    "playerCount": "Player Count",
+    "playerCount": "Players",
     "quickJoinBtn": "Quick Join a Game",
     "joinBtn": "Find Game", 
-    "createBtn": "Create",
+    "createBtn": "Create Game",
     "update": "Update Account",
     "delete": "Delete Account",
     "account": "My Account",
@@ -46,14 +49,15 @@
     "helpInfoD": "Create a Game ",
     "helpInfoE": "to create your own multiplayer or singleplayer game.\n\n- When the game starts, a guess needs to be entered into the textfield and after pressing the ",
     "helpInfoF": " button next to it, information such as right and in right place and wrong and in wrong place can be observed in the table below.\n\n- After guessing the number correctly game is won.\n\n- Scoring is done by taking into consideration the digit count selected, time taken and number of guesses before winning.",
-    "time": "Time: ",
-    "digit": "Digit Count: ",
-    "bestOf": "Best Of: ",
-    "increasingDifficulty": "Increasing Difficulty: ",
+    "time": "Time ",
+    "digit": "Digits",
+    "bestOf": "Round",
+    "multiplayer": "Multiplayer",
+    "increasingDifficulty": "Increasing Difficulty",
     "name": "Name",
     "score": "Score",
     "endRound": "End of the Round",
-    "nextRound": "Next round starts in: ",
+    "nextRound": "Next round starts in ",
     "leave": "Leave Game",
     "results": "Game Results",
     "join": "Join",
