--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -1,64 +1,68 @@
 {
-    "title": "Sayi Bulmaca",
-    "login": "Email ile Giris Yap",
-    "loginGoogle": "Google ile Giris Yap",
-    "signup": "Email ile Kayit Ol",
-    "signupGoogle": "Google ile Kayit Ol",
-    "id": "Kullanici Adi",
-    "pass": "Sifre",
-    "alert": "Uyari",
-    "alertFill": "Lutfen tum bilgileri doldurun",
-    "alertNotFound": "Kullanici bulunamadi",
-    "alertWrong": "Yanlis sifre girildi",
+    "title": "Sayı Bulmaca",
+    "login": "Giriş Yap",
+    "loginEmail": "Email ile Giriş Yap",
+    "loginGoogle": "Google ile Giriş Yap",
+    "signup": "Kayıt Ol",
+    "signupEmail": "Email ile Kayıt Ol",
+    "signupGoogle": "Google ile Kayıt Ol",
+    "id": "Kullanıcı Adı",
+    "pass": "Şifre",
+    "alert": "Uyarı",
+    "alertFill": "Lütfen tüm bilgileri doldurun",
+    "alertNotFound": "Kullanıcı bulunmadı",
+    "alertWrong": "Yanlıs şifre girildi",
     "alertExists": "Bu email ile bir hesap var",
-    "alertLogout": "Hesaptan cikmak istediginizden emin misiniz?",
-    "alertDelete": "Hesabi silmek istediginize emin misiniz?'",
-    "alertLeave": "Oyundan cikmak istediginize emin misiniz?",
-    "alertInsufficient": "Hane satin almak icin yeterli kredi yok, gereken: ",
+    "alertLogout": "Hesaptan çıkmak istediğinize emin misiniz?",
+    "alertDelete": "Hesabi silmek istediğinize emin misiniz?'",
+    "alertLeave": "Oyundan çıkmak istediğinize emin misiniz?",
+    "alertInsufficient": "Hane satın almak için yeterli kredi yok, gereken: ",
+    "signOut": "Çıkış Yap",
     "yes": "Evet",
     "no": "Hayir",
     "apply": "Uygula",
     "home": "Ana Sayfa",
-    "waitingStart": "Oyunun baslatilmasi bekleniyor",
+    "waitingStart": "Oyunun başlatılması bekleniyor",
     "waitingPlayers": "Oyuncular Bekleniyor",
-    "found": " kisi bulundu...",
-    "abort": "Vazgec",
-    "search": "Oyun Araniyor...",
-    "searchPlayers": "Rakipler Araniyor...",
-    "creator": "Olusturan",
-    "playerCount": "Katilan Sayisi",
-    "quickJoinBtn": "Hizli Oyun Ara",
+    "found": " kişi bulundu...",
+    "abort": "Vazgeç",
+    "search": "Oyun Aranıyor...",
+    "searchPlayers": "Rakipler Aranıyor...",
+    "creator": "Oluşturan",
+    "playerCount": "Katılanlar",
+    "quickJoinBtn": "Hızlı Oyun Ara",
     "joinBtn": "Oyun Ara",
-    "createBtn": "Oyun Olustur",
-    "update": "Hesabi Guncelle",
-    "delete": "Hesabi Sil",
-    "start": "Oyunu Baslat",
-    "account": "Hesabim",    
+    "createBtn": "Oyun Oluştur",
+    "multiplayer": "Karşılıklı",
+    "update": "Hesabı Güncelle",
+    "delete": "Hesabı Sil",
+    "start": "Oyunu Başlat",
+    "account": "Hesabım",    
     "credit": "Kredi",
     "settings": "Ayarlar",
     "soundEffects": "Ses Efektleri",
     "language": "Dil",
     "level": "Seviye ",
-    "help": "Yardim",
-    "helpInfoA": "- Oyunu oynamak icin ",
+    "help": "Yardım",
+    "helpInfoA": "- Oyunu oynamak için ",
     "helpInfoB": "Oyun Ara ",
-    "helpInfoC": " ile olusturulmus bir oyuna katilabilir ya da  ",
-    "helpInfoD": "Oyun Olustur ",
+    "helpInfoC": " ile oluşturulmuş bir oyuna katılabilir ya da  ",
+    "helpInfoD": "Oyun Oluştur ",
     "helpInfoE": "ile single veya multiplayer oyun olusturulabilir.\n\n- Oyun basladiginda tahmin girilir ve ",
     "helpInfoF": "'ya basinca edilen tahmin, dogru tahmin edilen sayilar ve yanlis yerde olan sayilar altdaki listede gozukur.\n\n- Tum sayilar ve yerleri dogru tahmin edildiginde oyun kazanilir.\n\n- Skorlama secilen sayi hane sayisi, kazanmak icin alinan sure ve tahmin sayisi kullanilarak yapilir. ",
     "time": "Zaman",
-    "digit": "Sayi hane sayisi: ",
-    "bestOf": "Kac oyun uzerinden: ",
-    "increasingDifficulty": "Zorlasan Mod: ",
+    "digit": "Sayı",
+    "bestOf": "Round",
+    "increasingDifficulty": "Zorlaşan Mod",
     "name": "Ad",
     "score": "Skor",
     "endRound": "Round Sonu",
-    "nextRound": "Sonraki round basliyor: ",
-    "leave": "Oyundan Cik",
-    "results": "Oyun Sonuclari",
-    "join": "Katil",
+    "nextRound": "Sonraki round başlıyor ",
+    "leave": "Oyundan Çık",
+    "results": "Oyun Sonuçları",
+    "join": "Katıl",
     "back": "Geri",
     "guess": "Tahmin",
-    "right": "Dogru Yerde",
-    "wrong": "Yanlis Yerde"
+    "right": "Doğru Yerde",
+    "wrong": "Yanlış Yerde"
 }
