--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -32,13 +32,14 @@
     "playerCount": "Katılanlar",
     "quickJoinBtn": "Hızlı Oyun Ara ve Katıl",
     "joinBtn": "Oyun Ara",
-    "createBtn": "Oyun Oluştur",
+    "joinBtmBtn": "Ara",
+    "createBtn": "Oluştur",
     "multiplayer": "Karşılıklı",
     "update": "Hesabı Güncelle",
     "delete": "Hesabı Sil",
     "logout": "Hesaptan Çıkış Yap",
     "start": "Oyunu Başlat",
-    "account": "Hesabım",    
+    "account": "Hesap",    
     "credit": "Kredi",
     "settings": "Ayarlar",
     "soundEffects": "Ses Efektleri",
@@ -59,7 +60,7 @@
     "helpScreenInfo3": "Oyunun amacı verilen zaman içinde rastgele oluşan numarayı doğru bilmektir.\nTahmin girildikten  sonra, doğru sayı ve doğru yerde olan sayılar (+) ile ve doğru sayı ama yanlış yerde olan sayılar (-) ile alttaki tabloda gözükür.\nSayı doğru tahmin edilirse oyunu kazanırsınız.\nSkorlama alınan zaman, tahmin sayısı ve oyun zorluğu (sayı uzunluğu) ele alınarak yapılır.\nTakıldıysanız, sağ üstten 100 kredi karşılığında bulamadığınız bir sayı size gösterilir.",
     "helpScreenImg3": "assets/imgs/help/trHelp3.png",
     "time": "Zaman",
-    "digit": "Sayı ",
+    "digit": "Rakam",
     "digitLength": "Sayı Uzunluğu",
     "bestOf": "Round",
     "increasingDifficulty": "Zorlaşan Mod",
