--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,7 +21,6 @@
     "yes": "Yes",
     "no": "No",
     "apply": "Apply",
-    "home": "Home Page",
     "waitingStart": "Waiting for game to begin",
     "waitingPlayers": "Waiting for players",
     "found": " players found...",
@@ -31,12 +30,13 @@
     "creator": "Host",
     "playerCount": "Players",
     "quickJoinBtn": "Quick Join a Game",
-    "joinBtn": "Find Game", 
-    "createBtn": "Create Game",
+    "joinBtn": "Search for a Game", 
+    "joinBtmBtn": "Search",
+    "createBtn": "Create",
     "update": "Update Account",
     "delete": "Delete Account",
-    "logout": "Sign Out of the Account",
-    "account": "My Account",
+    "logout": "Sign out of the Account",
+    "account": "Account",
     "credit": "Credit",
     "settings": "Settings",
     "soundEffects": "Sound Effects",
@@ -58,7 +58,7 @@
     "helpScreenInfo3": "The objective of the game is to guess the randomally generated number within a time limit.\nAfter a guess is entered, whichever digits are right in the right place (+) and whichever are right but in the wrong place (-) are shown in the table below.\nIf you guess it right you win the game.\nYou'll get scored according to time taken, number of guesses and the difficulty (number length).\nIf stuck, a not-found digit can be revealed by spending 100 credits from the button on top-right.",
     "helpScreenImg3": "assets/imgs/help/enHelp3.png",
     "time": "Time ",
-    "digit": "Digits",
+    "digit": "Digit",
     "digitLength": "Digit Length",
     "bestOf": "Round",
     "multiplayer": "Multiplayer",
