--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -44,7 +44,7 @@
     "account": "Hesap",    
     "credit": "Kredi",
     "settings": "Ayarlar",
-    "soundEffects": "Ses Efektleri",
+    "soundEffects": "Ses efektleri",
     "language": "Dil",
     "level": "Seviye ",
     "help": "Yardım", 
@@ -57,7 +57,7 @@
     "helpScreenInfo1": "Oyuna katılmak için, alt bardan \"Oyun Ara\"ya girdikten sonra \"Hızlı Oyun Ara ve Katıl\" ile uygun olan ilk oyuna katılabilir ya da Oyun Ara ile uygun oyunlar listesinden herhangi bir oyuna katılabilirsiniz. ",
     "helpScreenTitle2": "Oyun Oluşturma",
     "helpScreenImg2": "assets/imgs/help/trHelp2.png",
-    "helpScreenInfo2": "Oyun oluşturmak için alt bardan \"Oyun Oluştur\"a girildikten sonra oyun seçenekleri değiştirebilir ve Oyunu Başlat ile oyunu başlatabilirsiniz.\nKarşılıklı: Diğer oyuncularla oynamayı etkinleştir.\nZaman: Oyun bitmeden önce geçecek zaman.\nSayı Uzunluğu: Tahmin edilecek numaranın uzunluğu (uzunlukla zorlukda artar).\nRound: Oyun kaç round üzerinden.\nZorlaşan Mod: Round birden fazla ise seçilebilir, etkinleştirilince round ile birlikte zorlukda artar.",
+    "helpScreenInfo2": "Oyun oluşturmak için alt bardan \"Oyun Oluştur\"a girildikten sonra oyun seçenekleri değiştirebilir ve Oyunu Başlat ile oyunu başlatabilirsiniz.\nKarşılıklı: Diğer oyuncularla oynamayı etkinleştir.\nZaman: Oyun bitmeden önce geçecek zaman.\nSayı Uzunluğu: Tahmin edilecek numaranın uzunluğu (uzunlukla zorlukda artar).\nRound: Oyun kaç round üzerinden.\nArtan Zorluk: Round birden fazla ise seçilebilir, etkinleştirilince round ile birlikte zorluk da artar.",
     "helpScreenTitle3": "Oyun Nasıl Oynanır",
     "helpScreenInfo3": "Oyunun amacı verilen zaman içinde rastgele oluşan numarayı doğru bilmektir.\nTahmin girildikten  sonra, doğru sayı ve doğru yerde olan sayılar (+) ile ve doğru sayı ama yanlış yerde olan sayılar (-) ile alttaki tabloda gözükür.\nSayı doğru tahmin edilirse oyunu kazanırsınız.\nSkorlama alınan zaman, tahmin sayısı ve oyun zorluğu (sayı uzunluğu) ele alınarak yapılır.\nTakıldıysanız, sağ üstten 100 kredi karşılığında bulamadığınız bir sayı size gösterilir.",
     "helpScreenImg3": "assets/imgs/help/trHelp3.png",
@@ -65,7 +65,7 @@
     "digit": "Rakam",
     "digitLength": "Sayı Uzunluğu",
     "bestOf": "Round",
-    "increasingDifficulty": "Zorlaşan Mod",
+    "increasingDifficulty": "Artan Zorluk",
     "name": "Ad",
     "score": "Skor",
     "endRound": "Round Sonu",
@@ -90,6 +90,7 @@
     "unfriend": "Arkadaşdan çıkar",
     "invite": "Davet Et",
     "noUser": "Kullanıcı bulunamadı",
+    "sentInvite": "Oyun daveti gönderildi",
     "incomingInvite": "Gelen oyun daveti",
     "showInvite": "Oyun davet isteklerini göster"
 }
