--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,7 +3,7 @@
     "login": "Sign In",
     "loginEmail": "Sign In with Email",
     "loginGoogle": "Continue with Google",
-    "loginFacebook": "Continue with Facebook",
+    "loginFacebook": "Sign in with Facebook",
     "signup": "Sign up",
     "signupEmail": "Sign up with Email",
     "id": "Username",
@@ -69,7 +69,7 @@
     "score": "Score",
     "endRound": "End of the Round",
     "nextRound": "Next round starts in ",
-    "leave": "Leave Game",
+    "leave": "Leave the Game",
     "results": "Game Results",
     "join": "Join",
     "back": "Back",
