--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -3,7 +3,7 @@
     "login": "Giriş Yap",
     "loginEmail": "Email ile Giriş Yap",
     "loginGoogle": "Google ile Devam et",
-    "loginFacebook": "Facebook ile Devam et",
+    "loginFacebook": "Facebook ile giriş yap",
     "signup": "Kayıt Ol",
     "signupEmail": "Email ile Kayıt Ol",
     "id": "Kullanıcı Adı",
