--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -47,7 +47,7 @@
     "start": "Start Game",
     "level": "Level ",
     "help": "Help",
-    "noaccount": "No account? Sign Up",
+    "noaccount": "No account?   Sign Up",
     "helpScreenTitle0": "Welcome to Guess the Number!",
     "helpScreenInfo0": "",
     "helpScreenImg0": "assets/imgs/help/trHelp0.png",
@@ -60,8 +60,11 @@
     "helpScreenTitle3": "How to Play the Game",
     "helpScreenInfo3": "The objective of the game is to guess the randomally generated number within a time limit.\nAfter a guess is entered, whichever digits are right in the right place (+) and whichever are right but in the wrong place (-) are shown in the table below.\nIf you guess it right you win the game.\nYou'll get scored according to time taken, number of guesses and the difficulty (number length).\nIf stuck, a not-found digit can be revealed by spending 100 credits from the button on top-right.",
     "helpScreenImg3": "assets/imgs/help/enHelp3.png",
-    "time": "Duration ",
-    "digit": "Digit",
+    "timeLimit": "Duration",
+    "seconds": "seconds",
+    "minutes": "minutes",
+    "infinite": "Limitsiz",
+    "digit": "Digits",
     "digitLength": "Digit Length",
     "bestOf": "Round",
     "multiplayer": "Multiplayer",
@@ -73,6 +76,9 @@
     "leave": "Leave the Game",
     "results": "Game Results",
     "join": "Join",
+    "searchUser": "Find User",
+    "gameQuickJoin": "Quick Join a Game",
+    "gameList": "List Games",
     "back": "Back",
     "guess": "Guess",
     "right": "Right Place",
@@ -82,7 +88,7 @@
     "skip": "Skip",
     "done": "Done",
     "welcome": "Welcome ",
-    "searchUser": "Search users by email or name",
+    "searchUserHolder": "Search users by email or name",
     "sendFriend": "Send a friend request",
     "unsendFriend": "Unsend the friend request",
     "friendRequests": "Friend Requests",
