--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -32,9 +32,10 @@
     "searchPlayers": "Rakipler Aranıyor...",
     "creator": "Oluşturan",
     "playerCount": "Katılanlar",
-    "quickJoinBtn": "Hızlı Oyun Ara ve Katıl",
-    "joinBtn": "Oyun Ara",
+    "gameQuickJoin": "Oyun Ara ve Katıl",
+    "gameList": "Oyunları Listele",
     "joinBtmBtn": "Ara",
+    "searchUser": "Kullanıcı Arama",
     "createBtn": "Oluştur",
     "multiplayer": "Karşılıklı",
     "update": "Hesabı Güncelle",
@@ -49,7 +50,7 @@
     "language": "Dil",
     "level": "Seviye ",
     "help": "Yardım", 
-    "noaccount": "Hesabınız yokmu? Kayıt Ol",
+    "noaccount": "Hesabınız yokmu?   Kayıt Olun",
     "helpScreenTitle0": "Sayı Bulmaca'ya Hoşgeldiniz!",
     "helpScreenInfo0": "",
     "helpScreenImg0": "assets/imgs/help/trHelp0.png",
@@ -58,11 +59,14 @@
     "helpScreenInfo1": "Oyuna katılmak için, alt bardan \"Oyun Ara\"ya girdikten sonra \"Hızlı Oyun Ara ve Katıl\" ile uygun olan ilk oyuna katılabilir ya da Oyun Ara ile uygun oyunlar listesinden herhangi bir oyuna katılabilirsiniz. ",
     "helpScreenTitle2": "Oyun Oluşturma",
     "helpScreenImg2": "assets/imgs/help/trHelp2.png",
-    "helpScreenInfo2": "Oyun oluşturmak için alt bardan \"Oyun Oluştur\"a girildikten sonra oyun seçenekleri değiştirebilir ve Oyunu Başlat ile oyunu başlatabilirsiniz.\nKarşılıklı: Diğer oyuncularla oynamayı etkinleştir.\nZaman: Oyun bitmeden önce geçecek zaman.\nSayı Uzunluğu: Tahmin edilecek numaranın uzunluğu (uzunlukla zorlukda artar).\nRound: Oyun kaç round üzerinden.\nArtan Zorluk: Round birden fazla ise seçilebilir, etkinleştirilince round ile birlikte zorluk da artar.",
+    "helpScreenInfo2": "Oyun oluşturmak için alt bardan \"Oyun Oluştur\"a girildikten sonra oyun seçenekleri değiştirebilir ve Oyunu Başlat ile oyunu başlatabilirsiniz.\nKarşılıklı: Diğer oyuncularla oynamayı etkinleştir.\nZaman: Oyun bitmeden önce geçecek zaman.\nSayı Uzunluğu: Tahmin edilecek numaranın uzunluğu (uzunlukla zorluk artar).\nRound: Oyun kaç round üzerinden olduğu.\nArtan Zorluk: Round birden fazla ise seçilebilir, etkinleştirilince round ile birlikte zorluk da artar.",
     "helpScreenTitle3": "Oyun Nasıl Oynanır",
     "helpScreenInfo3": "Oyunun amacı verilen zaman içinde rastgele oluşan numarayı doğru bilmektir.\nTahmin girildikten  sonra, doğru sayı ve doğru yerde olan sayılar (+) ile ve doğru sayı ama yanlış yerde olan sayılar (-) ile alttaki tabloda gözükür.\nSayı doğru tahmin edilirse oyunu kazanırsınız.\nSkorlama alınan zaman, tahmin sayısı ve oyun zorluğu (sayı uzunluğu) ele alınarak yapılır.\nTakıldıysanız, sağ üstten 100 kredi karşılığında bulamadığınız bir sayı size gösterilir.",
     "helpScreenImg3": "assets/imgs/help/trHelp3.png",
-    "time": "Zaman",
+    "timeLimit": "Zaman(sn)",
+    "seconds": "saniye",
+    "minutes": "dakika",
+    "infinite": "Unlimited",
     "digit": "Rakam",
     "digitLength": "Sayı Uzunluğu",
     "bestOf": "Round",
@@ -83,7 +87,7 @@
     "skip": "Atla",
     "done": "Son",
     "welcome": "Hoş Geldiniz ",
-    "searchUser": "Email veya Ad girin",
+    "searchUserHolder": "Email veya ad girin",
     "sendFriend": "Arkadaş isteği gönder",
     "unsendFriend": "Arkadaş isteğini geri al",
     "friendRequests": "Arkadaş İstekleri",
