--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -34,7 +34,7 @@
     "quickJoinBtn": "Quick Join a Game",
     "joinBtn": "Search for a Game", 
     "joinBtmBtn": "Search",
-    "createBtn": "Create",
+    "create": "Create",
     "update": "Update Account",
     "delete": "Delete Account",
     "logout": "Sign out of the Account",
@@ -60,7 +60,7 @@
     "helpScreenTitle3": "How to Play the Game",
     "helpScreenInfo3": "The objective of the game is to guess the randomally generated number within a time limit.\nAfter a guess is entered, whichever digits are right in the right place (+) and whichever are right but in the wrong place (-) are shown in the table below.\nIf you guess it right you win the game.\nYou'll get scored according to time taken, number of guesses and the difficulty (number length).\nIf stuck, a not-found digit can be revealed by spending 100 credits from the button on top-right.",
     "helpScreenImg3": "assets/imgs/help/enHelp3.png",
-    "timeLimit": "Duration",
+    "duration": "Duration",
     "seconds": "seconds",
     "minutes": "minutes",
     "infinite": "Limitsiz",
@@ -98,5 +98,9 @@
     "noUser": "No user found",
     "sentInvite": "Sent a game invite to",
     "incomingInvite": "Incoming game invite",
-    "showInvite": "Display game invite requests"
+    "showInvite": "Display game invite requests",
+    "revealNumber": "The number was",
+    "leagues": "Leagues",
+    "createLeague": "Create a League",
+    "leagueCreated": "league has been created"
 }
