champ settings init.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -16,7 +16,8 @@
     "alertWrong": "Wrong password entered",
     "alertExists": "Account with that email already exists",
     "alertLogout": "Are you sure you wish to log out?",
-    "alertDelete": "Are you sure want to delete this account?",
+    "alertDeleteAccount": "Are you sure want to delete this account?",
+    "alertDeleteChampionship": "Are you sure wish to delete this championship?",
     "alertLeave": "Are you sure you want to leave the game?",
     "alertInsufficient": "Not enough credits to buy a digit, need: ",
     "signOut": "Sign Out",
@@ -30,13 +31,14 @@
     "search": "Searching for a Game...",
     "searchPlayers": "Searching for opponents...",
     "creator": "Host",
-    "playerCount": "Players",
+    "players": "Players",
     "quickJoinBtn": "Quick Join a Game",
     "joinBtn": "Search for a Game", 
     "joinBtmBtn": "Search",
     "create": "Create",
     "update": "Update Account",
-    "delete": "Delete Account",
+    "deleteAccount": "Delete Account",
+    "delete": "Delete",
     "logout": "Sign out of the Account",
     "account": "Account",
     "explore": "Explore",    
@@ -44,7 +46,8 @@
     "settings": "Settings",
     "soundEffects": "Sound effects",
     "language": "Language",
-    "start": "Start Game",
+    "startGame": "Start Game",
+    "startChampionship": "Start the Championship",
     "level": "Level ",
     "help": "Help",
     "noaccount": "No account?   Sign Up",
@@ -73,7 +76,8 @@
     "score": "Score",
     "endRound": "End of the Round",
     "nextRound": "Next round starts in ",
-    "leave": "Leave the Game",
+    "leave": "Leave",
+    "leaveGame": "Leave the Game",
     "results": "Game Results",
     "join": "Join",
     "searchUser": "Find User",
@@ -94,13 +98,16 @@
     "friendRequests": "Friend Requests",
     "friends": "Friends",
     "unfriend": "Remove from friends",
+    "kickOut": "Kick Out",
     "invite": "Invite",
     "noUser": "No user found",
     "sentInvite": "Sent a game invite to",
     "incomingInvite": "Incoming game invite",
     "showInvite": "Display game invite requests",
     "revealNumber": "The number was",
-    "leagues": "Leagues",
-    "createLeague": "Create a League",
-    "leagueCreated": "league has been created"
+    "championship": "Championship",
+    "details": "Details",
+    "createChampionship": "Create a championship",
+    "championshipCreated": "Championship has been created",
+    "toolTipPlayers": "more players are required."
 }
