--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -16,7 +16,8 @@
     "alertWrong": "Yanlış şifre girildi",
     "alertExists": "Bu email ile bir hesap var",
     "alertLogout": "Hesaptan çıkmak istediğinize emin misiniz?",
-    "alertDelete": "Hesabi silmek istediğinize emin misiniz?'",
+    "alertDeleteAccount": "Hesabi silmek istediğinize emin misiniz?'",
+    "alertDeleteChampionship": "Şampiyonluğu silmek istediğinize emin misiniz?",
     "alertLeave": "Oyundan çıkmak istediğinize emin misiniz?",
     "alertInsufficient": "Hane satın almak için yeterli kredi yok, gereken: ",
     "signOut": "Çıkış Yap",
@@ -31,7 +32,7 @@
     "search": "Oyun Aranıyor...",
     "searchPlayers": "Rakipler Aranıyor...",
     "creator": "Oluşturan",
-    "playerCount": "Katılanlar",
+    "players": "Katılanlar",
     "gameQuickJoin": "Oyun Ara ve Katıl",
     "gameList": "Oyunları Listele",
     "joinBtmBtn": "Ara",
@@ -39,9 +40,11 @@
     "create": "Oluştur",
     "multiplayer": "Karşılıklı",
     "update": "Hesabı Güncelle",
-    "delete": "Hesabı Sil",
+    "deleteAccount": "Hesabı Sil",
+    "delete": "Sil",
     "logout": "Hesaptan Çıkış Yap",
-    "start": "Oyunu Başlat",
+    "startGame": "Oyunu Başlat",
+    "startChampionship": "Şampiyonluğu Başlat",
     "explore": "Keşfet",    
     "account": "Hesap",    
     "credit": "Kredi",
@@ -75,7 +78,8 @@
     "score": "Skor",
     "endRound": "Round Sonu",
     "nextRound": "Sonraki round başlıyor ",
-    "leave": "Oyundan Çık",
+    "leave": "Ayrıl",
+    "leaveGame": "Oyundan Çık",
     "results": "Oyun Sonuçları",
     "join": "Katıl",
     "back": "Geri",
@@ -93,13 +97,15 @@
     "friendRequests": "Arkadaş İstekleri",
     "friends": "Arkadaşlar",
     "unfriend": "Arkadaşdan çıkar",
+    "kickOut": "Çıkar",
     "invite": "Davet Et",
     "noUser": "Kullanıcı bulunamadı",
     "sentInvite": "Oyun daveti gönderildi",
     "incomingInvite": "Gelen oyun daveti",
     "showInvite": "Oyun davet isteklerini göster",
     "revealNumber": "Aranan Rakam",
-    "leagues": "Ligler",
-    "createLeague": "Lig Oluştur",
-    "leagueCreated": "ligi oluşturuldu"
+    "championship": "Şampiyonluk",
+    "createChampionship": "Şampiyonluk Oluştur",
+    "championshipCreated": "Şampiyonluk oluşturuldu",
+    "toolTipPlayers": "oyuncu daha gerekiyor."
 }
