--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -14,11 +14,12 @@
     "alertFormat": "Information entered is formatted incorrectly",
     "alertNotFound": "User not found",
     "alertWrong": "Wrong password entered",
-    "alertExists": "Account with that email already exists",
+    "alertExistsAccount": "Account with that email already exists",
+    "alertExistsLeague": "League with that name already exists",
     "alertLogout": "Are you sure you wish to log out?",
     "alertDeleteAccount": "Are you sure want to delete this account?",
-    "alertDeleteChampionship": "Are you sure wish to delete this championship?",
-    "alertLeave": "Are you sure you want to leave the game?",
+    "alertDeleteLeague": "Are you sure wish to delete this league?",
+    "alertLeaveGame": "Are you sure you want to leave the game?",
     "alertInsufficient": "Not enough credits to buy a digit, need: ",
     "signOut": "Sign Out",
     "yes": "Yes",
@@ -31,10 +32,10 @@
     "search": "Searching for a Game...",
     "searchPlayers": "Searching for opponents...",
     "creator": "Host",
-    "players": "Players",
+    "players": "Player(s)",
     "quickJoinBtn": "Quick Join a Game",
     "joinBtn": "Search for a Game", 
-    "joinBtmBtn": "Search",
+    "joinBtmBtn": "Join",
     "create": "Create",
     "update": "Update Account",
     "deleteAccount": "Delete Account",
@@ -47,7 +48,7 @@
     "soundEffects": "Sound effects",
     "language": "Language",
     "startGame": "Start Game",
-    "startChampionship": "Start the Championship",
+    "startLeague": "Start the League",
     "level": "Level ",
     "help": "Help",
     "noaccount": "No account?   Sign Up",
@@ -105,9 +106,12 @@
     "incomingInvite": "Incoming game invite",
     "showInvite": "Display game invite requests",
     "revealNumber": "The number was",
-    "championship": "Championship",
+    "league": "League",
+    "leagues": "Ligler",
     "details": "Details",
-    "createChampionship": "Create a championship",
-    "championshipCreated": "Championship has been created",
-    "toolTipPlayers": "more players are required."
+    "noLeagues": "No leagues found",
+    "createLeague": "Create a league",
+    "leagueCreated": "League has been created",
+    "toolTipPlayers": "more players are required",
+    "leagueStarted": "League Started"
 }
