--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -14,11 +14,12 @@
     "alertFormat": "Bilgiler yanlış biçimli girildi",
     "alertNotFound": "Kullanıcı bulunmadı",
     "alertWrong": "Yanlış şifre girildi",
-    "alertExists": "Bu email ile bir hesap var",
+    "alertExistsAccount": "Bu email ile bir hesap var",
+    "alertExistsLeague": "Bu adla bir lig zaten var",
     "alertLogout": "Hesaptan çıkmak istediğinize emin misiniz?",
     "alertDeleteAccount": "Hesabi silmek istediğinize emin misiniz?'",
-    "alertDeleteChampionship": "Şampiyonluğu silmek istediğinize emin misiniz?",
-    "alertLeave": "Oyundan çıkmak istediğinize emin misiniz?",
+    "alertDeleteLeague": "Ligi silmek istediğinize emin misiniz?",
+    "alertLeaveGame": "Oyundan çıkmak istediğinize emin misiniz?",
     "alertInsufficient": "Hane satın almak için yeterli kredi yok, gereken: ",
     "signOut": "Çıkış Yap",
     "yes": "Evet",
@@ -32,10 +33,10 @@
     "search": "Oyun Aranıyor...",
     "searchPlayers": "Rakipler Aranıyor...",
     "creator": "Oluşturan",
-    "players": "Katılanlar",
+    "players": "Katılan(lar)",
     "gameQuickJoin": "Oyun Ara ve Katıl",
     "gameList": "Oyunları Listele",
-    "joinBtmBtn": "Ara",
+    "joinBtmBtn": "Katıl",
     "searchUser": "Kullanıcı Arama",
     "create": "Oluştur",
     "multiplayer": "Karşılıklı",
@@ -44,7 +45,7 @@
     "delete": "Sil",
     "logout": "Hesaptan Çıkış Yap",
     "startGame": "Oyunu Başlat",
-    "startChampionship": "Şampiyonluğu Başlat",
+    "startLeague": "Ligi Başlat",
     "explore": "Keşfet",    
     "account": "Hesap",    
     "credit": "Kredi",
@@ -104,8 +105,11 @@
     "incomingInvite": "Gelen oyun daveti",
     "showInvite": "Oyun davet isteklerini göster",
     "revealNumber": "Aranan Rakam",
-    "championship": "Şampiyonluk",
-    "createChampionship": "Şampiyonluk Oluştur",
-    "championshipCreated": "Şampiyonluk oluşturuldu",
-    "toolTipPlayers": "oyuncu daha gerekiyor."
+    "league": "Lig",
+    "leagues": "Ligler",
+    "noLeagues": "Lig bulunamadı",
+    "createLeague": "Lig Oluştur",
+    "leagueCreated": "Lig oluşturuldu",
+    "toolTipPlayers": "oyuncu daha gerekiyor",
+    "leagueStarted": "Başlayan Lig"
 }
