ui changes & league+

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -95,11 +95,13 @@
     "next": "Next",
     "skip": "Skip",
     "done": "Done",
+    "alreadyFoundNumber": "Number is found!",
     "welcome": "Welcome ",
     "searchUserHolder": "Search users by email or name",
     "sendFriend": "Send a friend request",
     "unsendFriend": "Unsend the friend request",
     "friendRequests": "Friend Requests",
+    "social": "Social",
     "friends": "Friends",
     "unfriend": "Remove from friends",
     "kickOut": "Kick Out",
@@ -111,7 +113,7 @@
     "showInvite": "Display game invite requests",
     "revealNumber": "The number was",
     "league": "League",
-    "leagues": "Ligler",
+    "leagues": "Leagues",
     "details": "Details",
     "noLeagues": "No leagues found",
     "createLeague": "Create a league",
