--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -99,6 +99,7 @@
     "sendFriend": "Arkadaş isteği gönder",
     "unsendFriend": "Arkadaş isteğini geri al",
     "friendRequests": "Arkadaş İstekleri",
+    "social": "Sosyal",
     "friends": "Arkadaşlar",
     "unfriend": "Arkadaşdan çıkar",
     "kickOut": "Çıkar",
