--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -54,7 +54,7 @@
     "startLeague": "Start the League",
     "level": "Level ",
     "help": "Help",
-    "noaccount": "No account?   Sign Up",
+    "noaccount": "No account? Sign Up",
     "helpScreenTitle0": "Welcome to Guess the Number!",
     "helpScreenInfo0": "",
     "helpScreenImg0": "assets/imgs/help/trHelp0.png",
@@ -82,7 +82,8 @@
     "nextRound": "Next round starts in ",
     "leave": "Leave",
     "leaveGame": "Leave the Game",
-    "results": "Game Results",
+    "game": "Game",
+    "results": "Results",
     "join": "Join",
     "searchUser": "Find User",
     "gameQuickJoin": "Quick Join a Game",
@@ -119,10 +120,15 @@
     "createLeague": "Create a league",
     "leagueCreated": "League has been created",
     "toolTipPlayers": "more players are required",
-    "joinedLeague": "Joined League",
+    "recentJoinedLeague": "Recently Joined League",
     "leagueStarted": "Ongoing League",
     "matchups": "Matchups",
     "standings": "Standings",
     "public": "Public",
-    "private": "Private"
+    "private": "Private",
+    "congrats": "Congratulations",
+    "place": "You Placed",
+    "over": "Past",
+    "ongoing": "Ongoing",
+    "share": "Share"
 }
