--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -57,7 +57,7 @@
     "language": "Dil",
     "level": "Seviye ",
     "help": "Yardım", 
-    "noaccount": "Hesabınız yokmu?   Kayıt Olun",
+    "noaccount": "Hesabınız yokmu? Kayıt Olun",
     "helpScreenTitle0": "Sayı Bulmaca'ya Hoşgeldiniz!",
     "helpScreenInfo0": "",
     "helpScreenImg0": "assets/imgs/help/trHelp0.png",
@@ -84,7 +84,8 @@
     "nextRound": "Sonraki round başlıyor ",
     "leave": "Ayrıl",
     "leaveGame": "Oyundan Çık",
-    "results": "Oyun Sonuçları",
+    "game": "Oyun",
+    "results": "Sonuçları",
     "join": "Katıl",
     "back": "Geri",
     "guess": "Tahmin",
@@ -116,10 +117,15 @@
     "createLeague": "Lig Oluştur",
     "leagueCreated": "Lig oluşturuldu",
     "toolTipPlayers": "oyuncu daha gerekiyor",
-    "joinedLeague": "Katılınan Lig",
+    "recentJoinedLeague": "Son Katılınan Lig",
     "leagueStarted": "Başlıyan Lig",
     "matchups": "Maçlar",
-    "standings": "Puan Durumu",
+    "standings": "Sıralama",
     "public": "Açık",
-    "private": "Özel"
+    "private": "Özel",
+    "congrats": "Tebrikler",
+    "place": "Sıralamanız",
+    "over": "Sonlanan",
+    "ongoing": "Devam Eden",
+    "share": "Paylaş"
 }
